# hw4

./: .gitignore  README.md  while.cabal
src/: Main.hs  Parser.hs  While.hs
src/While/: Env.hs  ErrorInterpreter.hs  Interpreter.hs  Parser.hs  Syntax.hs
test/While/: ErrorInterpreterSpec.hs  InterpreterSpec.hs
