name:          while
version:       0.1
cabal-version: >= 1.10

build-type: Simple

library
  build-depends:
    base >= 4 && < 5

  exposed-modules:
    Parser
    While
    While.Env
    While.ErrorInterpreter
    While.Interpreter
    While.Parser
    While.Syntax

  hs-source-dirs: src

  default-language: Haskell2010

  ghc-options: -Wall

executable while
  main-is: Main.hs

  build-depends:
    base >= 4 && < 5

  other-modules:
    Parser
    While
    While.Env
    While.ErrorInterpreter
    While.Interpreter
    While.Parser
    While.Syntax

  hs-source-dirs: src

  default-language: Haskell2010

  ghc-options: -Wall

test-suite spec
  type:    exitcode-stdio-1.0
  main-is: Spec.hs

  hs-source-dirs: test

  other-modules:
    While.ErrorInterpreterSpec
    While.InterpreterSpec

  build-depends:
    while,
    base  >= 4   && < 5,
    hspec >= 2.5 && < 2.6

  default-language: Haskell98
